[package]
name = "decdnnf_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"

[lib]
name = "decdnnf_rs"
path = "src/lib.rs"

[[bin]]
name = "decdnnf_rs"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0"
bitvec = "1.0"
crusti_app_helper = {path = "local_crates/crusti_app_helper-v0.1"}
rug = "1.22"
rustc-hash = "1.1"
