[package]
name = "decdnnf_rs"
authors = ["Jean-Marie Lagniez <lagniez@cril.fr>", "Emmanuel Lonca <lonca@cril.fr>"]
license = "GPL-3.0-or-later"
version = "0.1.1"
description = "A library for Decision-DNNFs."
categories = ["command-line-utilities", "science"]
keywords = ["decision", "DNNF", "model", "counting", "enumeration"]
homepage = "https://www.cril.univ-artois.fr/software/decdnnf-rs/"
repository = "https://github.com/crillab/decdnnf_rs"
rust-version = "1.72.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[lib]
name = "decdnnf_rs"
path = "src/lib.rs"

[[bin]]
name = "decdnnf_rs"
path = "src/main.rs"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0"
bitvec = "1.0"
chrono = "0.4.19"
clap = "2.33.3"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.20"
rug = "1.22"
rustc-hash = "1.1"
sysinfo = "0.30"
